--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -13,23 +13,24 @@
     <div class="col-lg-12">
         <div class="profile-widget profile-widget-info">
             <div class="panel-body" ng-if="currentUser">
-                <div class="col-sm-2 col-lg-2">
-                    <b ng-bind ="currentUser.fullName.first"></b><b ng-bind=" currentUser.fullName.last"></b>
+                <div class="col-sm-1 col-lg-1">
+                    
                      <div class="follow-ava">
                          <img src="../img/{{currentUser.uploadedFile}}" alt="profile pic" />
                      </div>
-                    <h6 ng-bind="currentUser.occupation"></h6>
+                   
                 </div>
                 <div class="follow-info col-lg-4 col-sm-4">
-                    <p ng-bind="currentUser.fullName.first"></p><p ng-bind="currentUser.fullName.last"></p>
+                   <b ng-bind ="currentUser.fullName.first"></b>&nbsp;&nbsp;<b ng-bind=" currentUser.fullName.last"></b>
                     <p ng-bind="currentUser.email"></p>
-                    <h6>
+                     <h6 ng-bind="currentUser.occupation"></h6>
+                    <!--<h6>
                         <span><i class="icon_clock_alt"></i>11:05 AM</span>
                         <span><i class="icon_calendar"></i>25.10.13</span>
                         <span><i class="icon_pin_alt"></i>NY</span>
-                    </h6>
+                    </h6>-->
                 </div>
-                <div class="col-lg-2 col-sm-6 follow-info weather-category">
+               <!-- <div class="col-lg-2 col-sm-6 follow-info weather-category">
                             <ul>
                                 <li class="active">
                                               
@@ -61,7 +62,7 @@
                                 </li>
 										   
                             </ul>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
