--- a/public/views/chatRoom.html
+++ b/public/views/chatRoom.html
@@ -1,19 +1,17 @@
-﻿<link href="../stylesheets/bootstrap.css" rel="stylesheet" />
-
-<div class="container" style="margin-top:60px">
-    <div class="row">
+﻿<div class="" style="margin-top:60px">
+    <div class="">
         <!--messages part-->
-        <div class="col-md-10">
+        <div class="col-sm-10">
             <div class="panel">
                 <div class="panel-heading">
                     <h4 class="text-center">Chat Room</h4>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="">
                     <div class="item" ng-repeat="message in messages">
                         <span>{{message.user+' : '+message.text}}</span>
                     </div>
                 </div>
-                <div class="navbar-fixed-bottom navbar">
+                <div class="panel-footer">
                     <form class="well form-group" ng-submit="sendMessage()">
                         <input class="form-control" type="text" ng-model="message" />
                         <input type="submit" class="btn-success btn btn-default" value="Send" />
@@ -23,7 +21,7 @@
             
         </div>
         <!--list of users-->
-        <div class="col-md-2">
+        <div class="col-sm-2">
             <div class="panel">
                 <div class="panel-heading">
                     <h4 class="text-center">User List</h4>
