--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -16,14 +16,14 @@
                 <div class="col-sm-1 col-lg-1">
                     
                      <div class="follow-ava">
-                         <img src="../img/{{currentUser.uploadedFile}}" alt="profile pic" />
+                         <img src="../img/{{currentProfile.uploadedFile}}" alt="profile pic" />
                      </div>
                    
                 </div>
                 <div class="follow-info col-lg-4 col-sm-4">
-                   <b ng-bind ="currentUser.fullName.first"></b>&nbsp;&nbsp;<b ng-bind=" currentUser.fullName.last"></b>
+                   <b ng-bind ="currentProfile.fullName.first"></b>&nbsp;&nbsp;<b ng-bind=" currentProfile.fullName.last"></b>
                     <p ng-bind="currentUser.email"></p>
-                     <h6 ng-bind="currentUser.occupation"></h6>
+                     <h6 ng-bind="currentProfile.occupation"></h6>
                     <!--<h6>
                         <span><i class="icon_clock_alt"></i>11:05 AM</span>
                         <span><i class="icon_calendar"></i>25.10.13</span>
@@ -152,34 +152,34 @@
                     <tab heading="Profile" class="tab-pane">
                         <section class="panel">
                             <div class="bio-graph-heading">
-                                    <span ng-bind="currentUser.biography"></span>
+                                    <span ng-bind="currentProfile.biography"></span>
                             </div>
                             <div class="panel-body bio-graph-info">
                                 <h1>Bio Graph</h1>
                                 <div class="row">
                                     <div class="bio-row">
-                                        <p><span>First Name </span>: <span ng-bind="currentUser.fullName.first"></span></p>
+                                        <p><span>First Name </span>: <span ng-bind="currentProfile.fullName.first"></span></p>
                                     </div>
                                     <div class="bio-row">
-                                        <p><span>Last Name </span>: <span ng-bind="currentUser.fullName.last"></span></p>
+                                        <p><span>Last Name </span>: <span ng-bind="currentProfile.fullName.last"></span></p>
                                     </div>                                              
                                     <div class="bio-row">
-                                        <p><span>Birthday</span>: <span ng-bind="currentUser.birthday"></span></p>
+                                        <p><span>Birthday</span>: <span ng-bind="currentProfile.birthday"></span></p>
                                     </div>
                                     <div class="bio-row">
-                                        <p><span>Country </span>: <span ng-bind="currentUser.country"></span></p>
+                                        <p><span>Country </span>: <span ng-bind="currentProfile.country"></span></p>
                                     </div>
                                     <div class="bio-row">
-                                        <p><span>Occupation </span>:<span ng-bind="currentUser.occupation"></span></p>
+                                        <p><span>Occupation </span>:<span ng-bind="currentProfile.occupation"></span></p>
                                     </div>
                                     <div class="bio-row">
-                                        <p><span>Email </span><span ng-bind="currentUser.email"></span></p>
+                                        <p><span>Email </span><span ng-bind="currentProfile.email"></span></p>
                                     </div>
                                     <div class="bio-row">
-                                        <p><span>Mobile </span>: <span ng-bind="currentUser.mobile"></span></p>
+                                        <p><span>Mobile </span>: <span ng-bind="currentProfile.mobile"></span></p>
                                     </div>
                                     <div class="bio-row">
-                                        <p><span>Phone </span><span ng-bind="currentUser.phone"></span></p>
+                                        <p><span>Phone </span><span ng-bind="currentProfile.phone"></span></p>
                                     </div>
                                 </div>
                             </div>
@@ -194,7 +194,7 @@
                                     <div class="form-group">
                                         <label class="col-lg-2 control-label">First Name</label>
                                         <div class="col-lg-6">
-                                            <input type="text" ng-model="currentUser.fullName.first" 
+                                            <input type="text" ng-model="currentProfile.fullName.first" 
                                                 class="form-control" id="f-name" placeholder="First Name">
                                         </div>
                                     </div>
@@ -202,35 +202,35 @@
                                         <label class="col-lg-2 control-label">Last Name</label>
                                         <div class="col-lg-6">
                                             <input type="text" class="form-control" id="l-name" 
-                                                placeholder="Last Name" ng-model="currentUser.fullName.last">
+                                                placeholder="Last Name" ng-model="currentProfile.fullName.last">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-lg-2 control-label">About Me</label>
                                         <div class="col-lg-10">
                                             <textarea name="" id="" class="form-control" cols="30" rows="5"
-                                                 placeholder="About Me" ng-model="currentUser.biography"></textarea>
+                                                 placeholder="About Me" ng-model="currentProfile.biography"></textarea>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-lg-2 control-label">Country</label>
                                         <div class="col-lg-6">
                                             <input type="text" class="form-control" id="c-name" placeholder="Country"
-                                                ng-model="currentUser.country">
+                                                ng-model="currentProfile.country">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-lg-2 control-label">Birthday</label>
                                         <div class="col-lg-6">
                                             <input type="text" class="form-control" id="b-day" placeholder="Birthday"
-                                                ng-model="currentUser.birthday">
+                                                ng-model="currentProfile.birthday">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-lg-2 control-label">Occupation</label>
                                         <div class="col-lg-6">
                                             <input type="text" class="form-control" id="occupation" placeholder="Occupation"
-                                                ng-model="currentUser.occupation">
+                                                ng-model="currentProfile.occupation">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -244,14 +244,14 @@
                                         <label class="col-lg-2 control-label">Mobile</label>
                                         <div class="col-lg-6">
                                             <input type="text" class="form-control" id="mobile" placeholder="Mobile number"
-                                                ng-model="currentUser.mobile">
+                                                ng-model="currentProfile.mobile">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-lg-2 control-label">Phone</label>
                                         <div class="col-lg-6">
                                             <input type="text" class="form-control" id="Text1" placeholder="Mobile number"
-                                                ng-model="currentUser.phone">
+                                                ng-model="currentProfile.phone">
                                         </div>
                                     </div>
 
@@ -259,7 +259,7 @@
                                         <label class="col-lg-2 control-label">Website URL</label>
                                         <div class="col-lg-6">
                                             <input type="text" class="form-control" id="url" placeholder="http://www.demowebsite.com "
-                                                ng-model="currentUser.websiteUrl">
+                                                ng-model="currentProfile.websiteUrl">
                                         </div>
                                     </div>
                                     
